--- a/index.css
+++ b/index.css
@@ -17,8 +17,8 @@ body {
 
 #display {
     width: 100%;
-    padding: 20px;
-    font-size: 5rem;
+    padding: 40px 25px;
+    font-size: 3rem;
     text-align: left;
     border: none;
     background-color: hsl(0, 0%, 20%);
@@ -39,7 +39,7 @@ button {
     border: none;
     background-color: hsl(0, 0%, 30%);
     color: white;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bold;
     cursor: pointer;
 }
